<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <!-- Logo -->

    <!-- Welcome Title -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/vivagym_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_round" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/welcome_vivagym"
        android:textColor="@color/vivagym_principal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- We are happy have to see you again -->

    <!-- New Mail -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/glad_see_again"
        android:textColor="@color/vivagym_text_blueblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:fontFamily="@font/quicksand"
        android:inputType="textEmailAddress"
        android:textColor="@color/vivagym_text_blueblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="15"
            android:fontFamily="@font/quicksand"
            android:inputType="textEmailAddress"
            android:textColor="@color/vivagym_text_blueblack" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password_hint"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/vivagym_text_blueblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/vivagym_text_blueblack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="15"
            android:fontFamily="@font/quicksand"
            android:inputType="textPassword"
            android:textColor="@color/vivagym_text_blueblack" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save data Switch -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/savePasswordSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/remember_my_information"
        android:textColor="@color/vivagym_text_blueblack"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField" />

    <!-- Loader -->
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/biometricButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savePasswordSwitch" />

    <!-- Biometric Button -->
    <Button
        android:id="@+id/biometricButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@drawable/ic_fingerprint_24px"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/login_biometric"
        android:textColor="@color/vivagym_text_blueblack"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="332dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>